  classification in statsFilter. ``PHAB_ID=D100649``

- scrooge-generator: Generated scala $FinagleClient takes a `RichClientParam` for all
  configuration params, such as `TProtocolFactory`, `ResponseClassifier`, `maxReusableBufferSize`,
  and `StatsReceiver`, $FinagleService takes a `RichServerParam`. ``PHAB_ID=D83190``

4.20.0
------

No Changes

4.19.0
------
- scrooge-generator: Generated scala/java code now is using `serviceMap` instead of `functionMap`
  for Finagle services' method implementation. ``PHAB_ID=D73619`` for scala and
  ``PHAB_ID=D76129`` for java

- scrooge-generator: Generated Java code now is using `c.t.s.TReusableBuffer` to reduce
  object allocations. This in turn adds `scrooge-core` as dependency for generated
  java code. ``PHAB_ID=D60406``

- scrooge-generator: support for thrift struct field doccomments for scala
  generated code ``RB_ID=918179``

- scrooge-generator: The `MethodIface` in generated Scala code implements
  `FutureIface`. It already "was" that type in practice but did not implement
  that trait. ``PHAB_ID=D67289``

- scrooge-generator: Generated Cocoa code now supports modular frameworks and
  removes some compiler warnings about implicit casts. ``PHAB_ID=D74200``

4.18.0
------
- scrooge-generator: Expose some methods of TemplateGenerator as static methods ``PHAB_ID=D60494``

- scrooge-generator-tests: Add ability for langauge implementations outside of scrooge directory
  to use GoldFileTest, expose generated files to subclasses of GoldFileTest, add option to keep
  generated files for debugging. ``PHAB_ID=D60494``

- scrooge-adaptive: Add support for adaptive decoding, that learns
  from field access patterns and optimizes the decoder to cheaply
  skip over unused fields. ``RB_ID=908416``

- scrooge-generator: Scala code generation support for annotations on enums ``RB_ID=917467``

4.17.0
------

- scrooge-core: To reduce object allocations, `c.t.s.TFieldBlob` now uses `c.t.io.Buf`,