@@ -1,1 +1,1 @@
-sbt.version=0.13.16
+sbt.version=1.0.0
