@@ -1,477 +1,40 @@
-#!/usr/bin/env bash
-#
-# A more capable sbt runner, coincidentally also called sbt.
-# Author: Paul Phillips <paulp@typesafe.com>
+#!/bin/bash
 
-# todo - make this dynamic
-declare -r sbt_release_version=0.13.16
+sbtver=1.0.0
+sbtjar=sbt-launch.jar
+sbtsha128=69f23f5233d372b073ead640375774367502e81b
 
-declare sbt_jar sbt_dir sbt_create sbt_launch_dir
-declare scala_version java_home sbt_explicit_version
-declare verbose debug quiet noshare batch trace_level log_level
-declare sbt_saved_stty
+sbtrepo="https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch"
 
-echoerr () { [[ -z $quiet ]]           && echo    "$@" >&2; }
-vlog ()    { [[ -n "$verbose$debug" ]] && echoerr "$@"; }
-dlog ()    { [[ -n $debug ]]           && echoerr "$@"; }
-
-# we'd like these set before we get around to properly processing arguments
-for arg in "$@"; do
-  case $arg in
-    -q|-quiet)    quiet=true ;;
-    -d|-debug)    debug=true ;;
-  -v|-verbose)  verbose=true ;;
-            *)               ;;
-  esac
-done
-
-build_props_sbt () {
-  if [[ -r project/build.properties ]]; then
-    versionLine=$(grep ^sbt.version project/build.properties | tr -d ' \r')
-    versionString=${versionLine##sbt.version=}
-    echo "$versionString"
+if [ ! -f $sbtjar ]; then
+  echo "downloading $PWD/$sbtjar" 1>&2
+  if ! curl --location --silent --fail --remote-name $sbtrepo/$sbtver/$sbtjar; then
+    exit 1
   fi
-}
-
-update_build_props_sbt () {
-  local ver="$1"
-  local old=$(build_props_sbt)
-
-  if [[ $ver == $old ]]; then
-    return
-  elif [[ -r project/build.properties ]]; then
-    perl -pi -e "s/^sbt\.version[ ]*=.*\$/sbt.version=${ver}/" project/build.properties
-    grep -q '^sbt.version[ ]*=' project/build.properties || printf "\nsbt.version=${ver}\n" >> project/build.properties
-
-    echoerr !!!
-    echoerr !!! Updated file project/build.properties setting sbt.version to: $ver
-    echoerr !!! Previous value was: $old
-    echoerr !!!
-  fi
-}
-
-sbt_version () {
-  if [[ -n $sbt_explicit_version ]]; then
-    echo $sbt_explicit_version
-  else
-    local v=$(build_props_sbt)
-    if [[ -n $v ]]; then
-      echo $v
-    else
-      echo $sbt_release_version
-    fi
-  fi
-}
-
-# restore stty settings (echo in particular)
-onSbtRunnerExit() {
-  [[ -n $sbt_saved_stty ]] || return
-  dlog ""
-  dlog "restoring stty: $sbt_saved_stty"
-  stty $sbt_saved_stty
-  unset sbt_saved_stty
-}
-
-# save stty and trap exit, to ensure echo is reenabled if we are interrupted.
-trap onSbtRunnerExit EXIT
-sbt_saved_stty=$(stty -g 2>/dev/null)
-dlog "Saved stty: $sbt_saved_stty"
-
-# this seems to cover the bases on OSX, and someone will
-# have to tell me about the others.
-get_script_path () {
-  local path="$1"
-  [[ -L "$path" ]] || { echo "$path" ; return; }
-
-  local target=$(readlink "$path")
-  if [[ "${target:0:1}" == "/" ]]; then
-    echo "$target"
-  else
-    echo "$(dirname $path)/$target"
-  fi
-}
-
-die() {
-  echo "Aborting: $@"
-  exit 1
-}
-
-make_url () {
-  version="$1"
-
-  echo "$sbt_launch_repo/org.scala-sbt/sbt-launch/$version/sbt-launch.jar"
-}
-
-readarr () {
-  while read ; do
-    eval "$1+=(\"$REPLY\")"
-  done
-}
-
-init_default_option_file () {
-  local overriding_var=${!1}
-  local default_file=$2
-  if [[ ! -r "$default_file" && $overriding_var =~ ^@(.*)$ ]]; then
-    local envvar_file=${BASH_REMATCH[1]}
-    if [[ -r $envvar_file ]]; then
-      default_file=$envvar_file
-    fi
-  fi
-  echo $default_file
-}
-
-declare -r cms_opts="-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
-declare -r jit_opts="-XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation"
-declare -r default_jvm_opts="-Dfile.encoding=UTF8 -Xms512m -Xmx1536m -Xss2m $jit_opts $cms_opts"
-declare -r noshare_opts="-Dsbt.global.base=project/.sbtboot -Dsbt.boot.directory=project/.boot -Dsbt.ivy.home=project/.ivy"
-declare -r latest_28="2.8.2"
-declare -r latest_29="2.9.3"
-declare -r latest_210="2.10.3"
-declare -r latest_211="2.11.11"
-declare -r latest_212="2.12.1"
-
-declare -r script_path=$(get_script_path "$BASH_SOURCE")
-declare -r script_dir="$(dirname $script_path)"
-declare -r script_name="$(basename $script_path)"
-
-# some non-read-onlies set with defaults
-declare java_cmd=java
-declare sbt_opts_file=$(init_default_option_file SBT_OPTS .sbtopts)
-declare jvm_opts_file=$(init_default_option_file JVM_OPTS .jvmopts)
-declare sbt_launch_repo="http://repo.typesafe.com/typesafe/ivy-releases"
-
-# pull -J and -D options to give to java.
-declare -a residual_args
-declare -a java_args
-declare -a scalac_args
-declare -a sbt_commands
-
-# args to jvm/sbt via files or environment variables
-declare -a extra_jvm_opts extra_sbt_opts
-
-# if set, use JAVA_HOME over java found in path
-[[ -e "$JAVA_HOME/bin/java" ]] && java_cmd="$JAVA_HOME/bin/java"
-
-# directory to store sbt launchers
-declare sbt_launch_dir="$HOME/.sbt/launchers"
-[[ -d "$sbt_launch_dir" ]] || mkdir -p "$sbt_launch_dir"
-[[ -w "$sbt_launch_dir" ]] || sbt_launch_dir="$(mktemp -d -t sbt_extras_launchers)"
-
-build_props_scala () {
-  if [[ -r project/build.properties ]]; then
-    versionLine=$(grep ^build.scala.versions project/build.properties)
-    versionString=${versionLine##build.scala.versions=}
-    echo ${versionString%% .*}
-  fi
-}
-
-execRunner () {
-  # print the arguments one to a line, quoting any containing spaces
-  [[ $verbose || $debug ]] && echo "# Executing command line:" && {
-    for arg; do
-      if [[ -n "$arg" ]]; then
-        if printf "%s\n" "$arg" | grep -q ' '; then
-          printf "\"%s\"\n" "$arg"
-        else
-          printf "%s\n" "$arg"
-        fi
-      fi
-    done
-    echo ""
-  }
-
-  if [[ -n $batch ]]; then
-    exec </dev/null
-  fi
-  exec "$@"
-}
-
-jar_url () {
-  case $1 in
-    0.13.*) make_url $1 ;;
-         *) make_url $sbt_release_version ;;
-  esac
-}
-
-jar_file () {
-  case $1 in
-    0.13.*) echo "$sbt_launch_dir/$1/sbt-launch.jar" ;;
-         *) echo "$sbt_launch_dir/$sbt_release_version/sbt-launch.jar" ;;
-  esac
-}
-
-download_url () {
-  local url="$1"
-  local jar="$2"
-
-  echo "Downloading sbt launcher for $(sbt_version):"
-  echo "  From  $url"
-  echo "    To  $jar"
-
-  mkdir -p $(dirname "$jar") && {
-    if which curl >/dev/null; then
-      curl --location --fail --silent "$url" --output "$jar"
-    elif which wget >/dev/null; then
-      wget --quiet -O "$jar" "$url"
-    fi
-  } && [[ -r "$jar" ]]
-}
-
-acquire_sbt_jar () {
-  for_sbt_version="$(sbt_version)"
-  sbt_url="$(jar_url $for_sbt_version)"
-  sbt_jar="$(jar_file $for_sbt_version)"
-
-  [[ -r "$sbt_jar" ]] || download_url "$sbt_url" "$sbt_jar"
-}
-
-usage () {
-  cat <<EOM
-Usage: $script_name [options]
-
-  -h | -help         print this message
-  -v | -verbose      this runner is chattier
-  -d | -debug        set sbt log level to Debug
-  -q | -quiet        set sbt log level to Error
-  -trace <level>     display stack traces with a max of <level> frames (default: -1, traces suppressed)
-  -no-colors         disable ANSI color codes
-  -sbt-create        start sbt even if current directory contains no sbt project
-  -sbt-dir   <path>  path to global settings/plugins directory (default: ~/.sbt/<version>)
-  -sbt-boot  <path>  path to shared boot directory (default: ~/.sbt/boot in 0.11+)
-  -ivy       <path>  path to local Ivy repository (default: ~/.ivy2)
-  -no-share          use all local caches; no sharing
-  -offline           put sbt in offline mode
-  -jvm-debug <port>  Turn on JVM debugging, open at the given port.
-  -batch             Disable interactive mode
-  -prompt <expr>     Set the sbt prompt; in expr, 's' is the State and 'e' is Extracted
-
-  # sbt version (default: from project/build.properties if present, else latest release)
-  !!! The only way to accomplish this pre-0.12.0 if there is a build.properties file which
-  !!! contains an sbt.version property is to update the file on disk.  That's what this does.
-  -sbt-version  <version>   use the specified version of sbt (default: $sbt_release_version)
-  -sbt-jar      <path>      use the specified jar as the sbt launcher
-  -sbt-launch-dir <path>    directory to hold sbt launchers (default: $sbt_launch_dir)
-  -sbt-launch-repo <url>    repo url for downloading sbt launcher jar (default: $sbt_launch_repo)
-
-  # scala version (default: as chosen by sbt)
-  -28                       use $latest_28
-  -29                       use $latest_29
-  -210                      use $latest_210
-  -211                      use $latest_211
-  -212                      use $latest_212
-  -scala-home <path>        use the scala build at the specified directory
-  -scala-version <version>  use the specified version of scala
-  -binary-version <version> use the specified scala version when searching for dependencies
-
-  # java version (default: java from PATH, currently $(java -version 2>&1 | grep version))
-  -java-home <path>         alternate JAVA_HOME
-
-  # passing options to the jvm - note it does NOT use JAVA_OPTS due to pollution
-  # The default set is used if JVM_OPTS is unset and no -jvm-opts file is found
-  <default>        $default_jvm_opts
-  JVM_OPTS         environment variable holding either the jvm args directly, or
-                   the reference to a file containing jvm args if given path is prepended by '@' (e.g. '@/etc/jvmopts')
-                   Note: "@"-file is overridden by local '.jvmopts' or '-jvm-opts' argument.
-  -jvm-opts <path> file containing jvm args (if not given, .jvmopts in project root is used if present)
-  -Dkey=val        pass -Dkey=val directly to the jvm
-  -J-X             pass option -X directly to the jvm (-J is stripped)
-
-  # passing options to sbt, OR to this runner
-  SBT_OPTS         environment variable holding either the sbt args directly, or
-                   the reference to a file containing sbt args if given path is prepended by '@' (e.g. '@/etc/sbtopts')
-                   Note: "@"-file is overridden by local '.sbtopts' or '-sbt-opts' argument.
-  -sbt-opts <path> file containing sbt args (if not given, .sbtopts in project root is used if present)
-  -S-X             add -X to sbt's scalacOptions (-S is stripped)
-EOM
-}
-
-addJava () {
-  dlog "[addJava] arg = '$1'"
-  java_args=( "${java_args[@]}" "$1" )
-}
-addSbt () {
-  dlog "[addSbt] arg = '$1'"
-  sbt_commands=( "${sbt_commands[@]}" "$1" )
-}
-addScalac () {
-  dlog "[addScalac] arg = '$1'"
-  scalac_args=( "${scalac_args[@]}" "$1" )
-}
-addResidual () {
-  dlog "[residual] arg = '$1'"
-  residual_args=( "${residual_args[@]}" "$1" )
-}
-addResolver () {
-  addSbt "set resolvers += $1"
-}
-addDebugger () {
-  addJava "-Xdebug"
-  addJava "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=$1"
-}
-setScalaVersion () {
-  [[ "$1" == *-SNAPSHOT ]] && addResolver 'Resolver.sonatypeRepo("snapshots")'
-  addSbt "++ $1"
-}
-
-process_args ()
-{
-  require_arg () {
-    local type="$1"
-    local opt="$2"
-    local arg="$3"
-
-    if [[ -z "$arg" ]] || [[ "${arg:0:1}" == "-" ]]; then
-      die "$opt requires <$type> argument"
-    fi
-  }
-  while [[ $# -gt 0 ]]; do
-    case "$1" in
-       -h|-help) usage; exit 1 ;;
-    -v|-verbose) verbose=true && log_level=Info && shift ;;
-      -d|-debug) debug=true && log_level=Debug && shift ;;
-      -q|-quiet) quiet=true && log_level=Error && shift ;;
-
-         -trace) require_arg integer "$1" "$2" && trace_level=$2 && shift 2 ;;
-           -ivy) require_arg path "$1" "$2" && addJava "-Dsbt.ivy.home=$2" && shift 2 ;;
-     -no-colors) addJava "-Dsbt.log.noformat=true" && shift ;;
-      -no-share) noshare=true && shift ;;
-      -sbt-boot) require_arg path "$1" "$2" && addJava "-Dsbt.boot.directory=$2" && shift 2 ;;
-       -sbt-dir) require_arg path "$1" "$2" && sbt_dir="$2" && shift 2 ;;
-     -debug-inc) addJava "-Dxsbt.inc.debug=true" && shift ;;
-       -offline) addSbt "set offline := true" && shift ;;
-     -jvm-debug) require_arg port "$1" "$2" && addDebugger $2 && shift 2 ;;
-         -batch) batch=true && shift ;;
-        -prompt) require_arg "expr" "$1" "$2" && addSbt "set shellPrompt in ThisBuild := (s => { val e = Project.extract(s) ; $2 })" && shift 2 ;;
-
-    -sbt-create) sbt_create=true && shift ;;
-       -sbt-jar) require_arg path "$1" "$2" && sbt_jar="$2" && shift 2 ;;
-   -sbt-version) require_arg version "$1" "$2" && sbt_explicit_version="$2" && shift 2 ;;
--sbt-launch-dir) require_arg path "$1" "$2" && sbt_launch_dir="$2" && shift 2 ;;
--sbt-launch-repo) require_arg path "$1" "$2" && sbt_launch_repo="$2" && shift 2 ;;
- -scala-version) require_arg version "$1" "$2" && setScalaVersion "$2" && shift 2 ;;
--binary-version) require_arg version "$1" "$2" && addSbt "set scalaBinaryVersion in ThisBuild := \"$2\"" && shift 2 ;;
-    -scala-home) require_arg path "$1" "$2" && addSbt "set every scalaHome := Some(file(\"$2\"))" && shift 2 ;;
-     -java-home) require_arg path "$1" "$2" && java_cmd="$2/bin/java" && shift 2 ;;
-      -sbt-opts) require_arg path "$1" "$2" && sbt_opts_file="$2" && shift 2 ;;
-      -jvm-opts) require_arg path "$1" "$2" && jvm_opts_file="$2" && shift 2 ;;
-
-            -D*) addJava "$1" && shift ;;
-            -J*) addJava "${1:2}" && shift ;;
-            -S*) addScalac "${1:2}" && shift ;;
-            -28) setScalaVersion $latest_28 && shift ;;
-            -29) setScalaVersion $latest_29 && shift ;;
-           -210) setScalaVersion $latest_210 && shift ;;
-           -211) setScalaVersion $latest_211 && shift ;;
-           -212) setScalaVersion $latest_212 && shift ;;
-
-              *) addResidual "$1" && shift ;;
-    esac
-  done
-}
-
-# process the direct command line arguments
-process_args "$@"
-
-# skip #-styled comments
-readConfigFile() {
-  while read line; do echo ${line/\#*/} | grep -vE '^\s*$'; done < $1
-}
-
-# if there are file/environment sbt_opts, process again so we
-# can supply args to this runner
-if [[ -r "$sbt_opts_file" ]]; then
-  vlog "Using sbt options defined in file $sbt_opts_file"
-  readarr extra_sbt_opts < <(readConfigFile "$sbt_opts_file")
-elif [[ -n "$SBT_OPTS" && !($SBT_OPTS =~ ^@.*) ]]; then
-  vlog "Using sbt options defined in variable \$SBT_OPTS"
-  extra_sbt_opts=( $SBT_OPTS )
-else
-  vlog "No extra sbt options have been defined"
 fi
 
-[[ -n $extra_sbt_opts ]] && process_args "${extra_sbt_opts[@]}"
-
-# reset "$@" to the residual args
-set -- "${residual_args[@]}"
-argumentCount=$#
-
-# only exists in 0.12+
-setTraceLevel() {
-  case $(sbt_version) in
-     0.{7,10,11}.*) echoerr "Cannot set trace level in sbt version $(sbt_version)" ;;
-                 *) addSbt "set every traceLevel := $trace_level" ;;
-  esac
-}
-
-# set scalacOptions if we were given any -S opts
-[[ ${#scalac_args[@]} -eq 0 ]] || addSbt "set scalacOptions in ThisBuild += \"${scalac_args[@]}\""
-
-# Update build.properties on disk to set explicit version - sbt gives us no choice
-[[ -n "$sbt_explicit_version" ]] && update_build_props_sbt "$sbt_explicit_version"
-vlog "Detected sbt version $(sbt_version)"
-
-[[ -n "$scala_version" ]] && echoerr "Overriding scala version to $scala_version"
-
-# no args - alert them there's stuff in here
-(( $argumentCount > 0 )) || {
-  vlog "Starting $script_name: invoke with -help for other options"
-  residual_args=( shell )
-}
-
-# verify this is an sbt dir or -create was given
-[[ -r ./build.sbt || -d ./project || -n "$sbt_create" ]] || {
-  cat <<EOM
-$(pwd) doesn't appear to be an sbt project.
-If you want to start sbt anyway, run:
-  $0 -sbt-create
-
-EOM
+checksum=`openssl dgst -sha1 $sbtjar | awk '{ print $2 }'`
+if [ "$checksum" != $sbtsha128 ]; then
+  echo "bad $PWD/$sbtjar.  delete $PWD/$sbtjar and run $0 again."
   exit 1
-}
-
-# pick up completion if present; todo
-[[ -r .sbt_completion.sh ]] && source .sbt_completion.sh
-
-# no jar? download it.
-[[ -r "$sbt_jar" ]] || acquire_sbt_jar || {
-  # still no jar? uh-oh.
-  echo "Download failed. Obtain the jar manually and place it at $sbt_jar"
-  exit 1
-}
-
-if [[ -n $noshare ]]; then
-  for opt in ${noshare_opts}; do
-    addJava "$opt"
-  done
-else
-  [[ -n "$sbt_dir" ]] || {
-    sbt_dir=~/.sbt/$(sbt_version)
-    vlog "Using $sbt_dir as sbt dir, -sbt-dir to override."
-  }
-  # addJava "-Dsbt.global.base=$sbt_dir"
 fi
 
-if [[ -r "$jvm_opts_file" ]]; then
-  vlog "Using jvm options defined in file $jvm_opts_file"
-  readarr extra_jvm_opts < <(readConfigFile "$jvm_opts_file")
-elif [[ -n "$JVM_OPTS" && !($JVM_OPTS =~ ^@.*) ]]; then
-  vlog "Using jvm options defined in \$JVM_OPTS variable"
-  extra_jvm_opts=( $JVM_OPTS )
-else
-  vlog "Using default jvm options"
-  extra_jvm_opts=( $default_jvm_opts )
-fi
+[ -f ~/.sbtconfig ] && . ~/.sbtconfig
 
-# traceLevel is 0.12+
-[[ -n $trace_level ]] && setTraceLevel
-
-# [[ -n $log_level ]] && [[ $log_level != Info ]] && logLevalArg="set logLevel in Global := Level.$log_level"
-
-# run sbt
-execRunner "$java_cmd" \
-  "${extra_jvm_opts[@]}" \
-  "${java_args[@]}" \
-  -jar "$sbt_jar" \
-  "$logLevalArg" \
-  "${sbt_commands[@]}" \
-  "${residual_args[@]}"
+java -ea                          \
+  $SBT_OPTS                       \
+  $JAVA_OPTS                      \
+  -Djava.net.preferIPv4Stack=true \
+  -XX:+AggressiveOpts             \
+  -XX:+UseParNewGC                \
+  -XX:+UseConcMarkSweepGC         \
+  -XX:+CMSParallelRemarkEnabled   \
+  -XX:+CMSClassUnloadingEnabled   \
+  -XX:ReservedCodeCacheSize=128m  \
+  -XX:SurvivorRatio=128           \
+  -XX:MaxTenuringThreshold=0      \
+  -Xss8M                          \
+  -Xms512M                        \
+  -Xmx2G                          \
+  -server                         \
+  -jar $sbtjar "$@"
